Feature/sidbar complejo y y flujo de usuarios (#15)
* feat(sidebar): complex side bar y vista básica de modificar usuario

* feat(users-detail): expande users y muestra 3 vistas

* feat(style): override angular material en vez de definirlo manual

* feat(UI): mejoras visuales y usabilidad de navegacion y usuarios

* refactor(users): cambio de estructura, uses cases

* refactor(users-manage):  quita funcionalidad de page y la pasa a facade

* refactor(users): simplifica el user structure
